--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -23,5 +24,6 @@ const { title } = Astro.props;
 	<body class="dark:bg-gray-800 bg-white dark:text-white text-zinc-900 min-h-screen grid grid-rows-[auto 1fr auto]">
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
