--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,5 +2,5 @@
     <a href="/" class="text-2xl">
         edwinboon<span class="text-teal-600">.dev</span>
     </a>
-    <p>menu items</p>
+    <a class="bg-teal-600 py-2 px-6 rounded-md border-teal-600 border-[1px] transition ease-in-out duration-300 hover:bg-transparent" target="_blank" href="https://www.github.com/brwmaster">resume</a>
 </header>
