--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,3 +1,3 @@
-<footer class="max-w-[96rem] w-full mx-auto py-12 max-sm:py-10 px-12 max-sm:-5 flex justify-center">
+<footer class="max-w-[96rem] w-full mx-auto py-12 max-sm:py-10 px-12 max-sm:-5 flex justify-center items-center">
     <p>Copyright <span class="text-teal-600">2024</span> @ edwinboon<span class="text-teal-600">.dev</span></p>
 </footer>
