--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<header class="max-w-[96rem] w-full mx-auto py-12 max-sm:py-10 px-12 flex justify-between items-center">
+<header class="max-w-[96rem] h-8 w-full mx-auto py-12 max-sm:py-10 px-4 flex justify-between items-center">
     <a href="/" class="text-2xl">
         edwinboon<span class="text-teal-600">.dev</span>
     </a>
